[workspace]
resolver = "3"
members = [
    # input
    "crates/netlist",

    # core [NEEDED]
    "crates/ir",       # Input IR
    "crates/devices",  # Devices & data about them
    "crates/build",    # Resolves, places, and routes the circuit

    # output [Optionally Packaged] or user defines own output
    "crates/svg",      # Package as SVG output
    "crates/tikz",     # Package as native TikZ output (LaTeX)

    # products: library facade + paper helper. (export/python is standalone,
    # built via maturin — keeps pyo3 out of the core build/lockfile.)
    "export/library",
    "export/latex",
]
exclude = ["export/python"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
thiserror = "1"
phf = { version = "0.11", features = ["macros"] }  # compile-time perfect-hash class lookup

# Workspace aliases
netlist = { path = "crates/netlist" }

ir = { path = "crates/ir" }
devices = { path = "crates/devices" }
build = { path = "crates/build" }

svg = { path = "crates/svg" }
tikz = { path = "crates/tikz" }
