[workspace]
resolver = "3"
members = [
    # input
    "crates/netlist",

    # core [NEEDED]
    "crates/ir",       # Input IR
    "crates/devices",  # Devices & data about them
    "crates/config",   # Opinion-based knobs read from lint.toml
    "crates/build",    # Resolves, places, and routes the circuit

    # output [Optionally Packaged] or user defines own output
    "crates/svg",      # Package as SVG output (the library's built-in backend)

    # products: library facade + paper helper. (export/python is standalone,
    # built via maturin — keeps pyo3 out of the core build/lockfile.)
    "export/library",
    "export/latex",
]
exclude = ["export/python", "tests/e2e", "tests/e2e/xschembackend"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
thiserror = "1"
phf = { version = "0.11", features = ["macros"] }  # compile-time perfect-hash class lookup

# Workspace aliases
netlist = { path = "crates/netlist" }

ir = { path = "crates/ir" }
devices = { path = "crates/devices" }
config = { path = "crates/config" }
build = { path = "crates/build" }

svg = { path = "crates/svg" }
