[package]
name = "cktimg-config"
description = "cktImg style knobs, read once from lint.toml (spacing, search effort, colors)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "config"

[dependencies]
serde.workspace = true
toml = "0.8"

[lints]
workspace = true
