[package]
name = "cktimg-devices"
description = "cktImg device catalog: symbol classes, terminal geometry, draw primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "devices"

[dependencies]
phf.workspace = true

[lints]
workspace = true
