[package]
name = "cktimg-ir"
description = "cktImg intermediate representation: SoA circuit topology + placed geometry (no layout logic)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ir"

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
