[package]
name = "cktimg-netlist"
description = "cktImg netlist parser: SPICE (HSPICE, NGSpice, Spectre) text to IR, panic-free"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "netlist"

[dependencies]
ir.workspace = true
devices.workspace = true
phf.workspace = true

[lints]
workspace = true
